CompositeChangeset: Use List.copyOf instead of Collections.unmodifiableList